--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="RhythmusByte"
     <title>FCC PROJECTS</title>
-</head>
-<body>
+ </head>
+ <body>
     <p align="center">
         <a href="Responsive-Web-Design/catphotoapp.html">
-            <button>Project 1</button>
+            <button>Cat Photo App</button>
+        </a>
+        <br>
+        <a href="Responsive-Web-Design/catphotoapp.html">
+            <button>Cafe Menu</button>
         </a>
     </p>
-</body>
+ </body>
 </html>
