--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="author" content="RhythmusByte"
     <title>FCC PROJECTS</title>
+   <style>
+    body {
+     background-color: #000;
+     color: #fff;
+    }
+   </style>
  </head>
  <body>
     <p align="center">
