--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <a href="Responsive-Web-Design/cafemenu.html">
             <button>Cafe Menu</button>
         </a>
+
+      <a href="Responsive-Web-Design/Colored-Markers/index.html">
+       <button>Colored Markers</button>
+      </a>
     </p>
  </body>
 </html>
