--- a/index.html
+++ b/index.html
@@ -1,30 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="author" content="RhythmusByte"
-    <title>FCC PROJECTS</title>
-   <style>
-    body {
-     background-color: #000;
-     color: #fff;
-    }
-   </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="RhythmusByte">
+  <meta charset="utf-8">
+
+  <title>FCC PROJECTS & LEARNINGS LIVE DEMO</title>
+
+  <style>
+   body {
+    background-color: rgb(0,0,0);
+    color: #fff;
+   }
+  </style>
  </head>
  <body>
-    <p align="center">
-        <a href="Responsive-Web-Design/catphotoapp.html">
-            <button>Cat Photo App</button>
-        </a>
-        
-        <a href="Responsive-Web-Design/cafemenu.html">
-            <button>Cafe Menu</button>
-        </a>
-
-      <a href="Responsive-Web-Design/Colored-Markers/index.html">
-       <button>Colored Markers</button>
-      </a>
-    </p>
+  <h1>FCC Projects & Learnings Live Demo</h1>
+  <hr>
+  <h2>Cat Photo App</h2>
+  <hr>
+  <a href="Responsive-Web-Design/catphotoapp.html">
+   <button>Cat Photo App</button>
+  </a>
+  <hr>
+  <h2>Cafe Menu</h2>
+  <a href="Responsive-Web-Design/cafemenu.html">
+   <button>Cafe Menu</button>
+  </a>
+  <hr>
+  <h2>Colored Marker</h2>
+  <a href="Responsive-Web-Design/Colored-Markers/index.html">
+   <button>Colored Markers</button>
+  </a>
  </body>
 </html>
