--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
     background-color: rgb(0,0,0);
     color: #fff;
    }
+
+   h1, h2 {
+    text-align: center;
+    margin: auto;
+   }
+
+   button {
+    align-items: center;
+    margin: auto;
+   }
   </style>
  </head>
  <body>
