--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     margin: auto;
    }
 
-   button {
+   .button {
+    display: flex;
     align-items: center;
     margin: auto;
    }
@@ -29,17 +30,17 @@
   <h2>Cat Photo App</h2>
   <hr>
   <a href="Responsive-Web-Design/catphotoapp.html">
-   <button>Cat Photo App</button>
+   <button class="button">Cat Photo App</button>
   </a>
   <hr>
   <h2>Cafe Menu</h2>
   <a href="Responsive-Web-Design/cafemenu.html">
-   <button>Cafe Menu</button>
+   <button class="button">Cafe Menu</button>
   </a>
   <hr>
   <h2>Colored Marker</h2>
   <a href="Responsive-Web-Design/Colored-Markers/index.html">
-   <button>Colored Markers</button>
+   <button class="button">Colored Markers</button>
   </a>
  </body>
 </html>
