--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     color: #fff;
    }
 
-   h1, h2 {
+   h2 {
     text-align: center;
     margin: auto;
    }
@@ -22,6 +22,13 @@
     display: flex;
     align-items: center;
     margin: auto;
+    background-color: rgb(0,0,0);
+    color: rgb(255,255,255);
+   }
+
+   a {
+    text-decoration: none;
+    color: rgb(255,255,255);
    }
   </style>
  </head>
@@ -40,5 +47,11 @@
   <a href="Responsive-Web-Design/Colored-Markers/index.html">
    <button class="button">Colored Markers</button>
   </a>
+  <hr>
+  <h2>Registration Form</h2>
+  <a href="Responsive-Web-Design/Registration-Form/index.html">
+   <button class="button">Registration Form</button>
+  </a>
+  <hr>
  </body>
 </html>
