--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="RhythmusByte">
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
 
   <title>FCC PROJECTS & LEARNINGS LIVE DEMO</title>
 
@@ -51,6 +51,11 @@
   <h2>Registration Form</h2>
   <a href="Responsive-Web-Design/Registration-Form/index.html">
    <button class="button">Registration Form</button>
+  </a>
+  <hr>
+  <h2>Survey Form</h2>
+  <a href="Responsive-Web-Design/Survey-Form/index.html">
+   <button class="button">Survey Form</button>
   </a>
   <hr>
  </body>
