--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
   <style>
    body {
-    background-color: rgb(0,0,0);
-    color: #fff;
+    background-color: #09003c;
+    color: rgb(255,255,255);
+    width: 100%;
+    height: 100vh;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
    }
 
    h2 {
@@ -21,7 +25,7 @@
    .button {
     display: flex;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     background-color: rgb(0,0,0);
     color: rgb(255,255,255);
    }
