--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
    }
 
    .button {
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-    background-color: rgb(0,0,0);
-    color: rgb(255,255,255);
+    display: block;
+    width: 80%;
+    margin: 1em auto;
+    height: 2em;
+    font-size: 1.1rem;
+    background-color: #007e02;
+    border-color: #005401;
+    min-width: 300px;
+    color: #fff;
    }
 
    a {
