--- a/Responsive-Web-Design/Rothko-Style/index.html
+++ b/Responsive-Web-Design/Rothko-Style/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="author" content="RhythmusByte">
     <title>Rothko Painting</title>
     <link href="./styles.css" rel="stylesheet">
   </head>
