--- a/index.html
+++ b/index.html
@@ -66,5 +66,10 @@
    <button class="button">Survey Form</button>
   </a>
   <hr>
+  <h2>Rothko Painting</h2>
+  <a href="Responsive-Web-Design/Rothko-Style/index.html">
+   <button class="button">Rothko Painting</button>
+  </a>
+  <hr>
  </body>
 </html>
