--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
     margin: auto;
    }
 
-   .button {
+   button {
     display: block;
     width: 80%;
     margin: 1em auto;
     height: 2em;
     font-size: 1.1rem;
-    background-color: #007e02;
+    background-color: rgb(255,255,255);
     border-color: #005401;
     min-width: 300px;
     color: #fff;
@@ -43,32 +43,32 @@
  <body>
   <h2>Cat Photo App</h2>
   <a href="Responsive-Web-Design/catphotoapp.html">
-   <button class="button">Cat Photo App</button>
+   <button>Cat Photo App</button>
   </a>
   <hr>
   <h2>Cafe Menu</h2>
   <a href="Responsive-Web-Design/cafemenu.html">
-   <button class="button">Cafe Menu</button>
+   <button>Cafe Menu</button>
   </a>
   <hr>
   <h2>Colored Marker</h2>
   <a href="Responsive-Web-Design/Colored-Markers/index.html">
-   <button class="button">Colored Markers</button>
+   <button>Colored Markers</button>
   </a>
   <hr>
   <h2>Registration Form</h2>
   <a href="Responsive-Web-Design/Registration-Form/index.html">
-   <button class="button">Registration Form</button>
+   <button>Registration Form</button>
   </a>
   <hr>
   <h2>Survey Form</h2>
   <a href="Responsive-Web-Design/Survey-Form/index.html">
-   <button class="button">Survey Form</button>
+   <button>Survey Form</button>
   </a>
   <hr>
   <h2>Rothko Painting</h2>
   <a href="Responsive-Web-Design/Rothko-Style/index.html">
-   <button class="button">Rothko Painting</button>
+   <button>Rothko Painting</button>
   </a>
   <hr>
  </body>
